NetBSD Problem Report #55127

From tsutsui@ceres.dti.ne.jp  Tue Mar 31 14:55:29 2020
Return-Path: <tsutsui@ceres.dti.ne.jp>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 503661A9213
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 31 Mar 2020 14:55:29 +0000 (UTC)
Message-Id: <202003311455.02VEtIpM004789@ceres.dti.ne.jp>
Date: Tue, 31 Mar 2020 23:55:18 +0900 (JST)
From: Izumi Tsutsui <tsutsui@ceres.dti.ne.jp>
Reply-To: tsutsui@ceres.dti.ne.jp
To: gnats-bugs@NetBSD.org
Cc: tsutsui@ceres.dti.ne.jp
Subject: Possible memory leak in drm2 radeon_ttm.c
X-Send-Pr-Version: 3.95

>Number:         55127
>Category:       kern
>Synopsis:       Possible memory leak in drm2 radeon_ttm.c
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Mar 31 15:00:00 +0000 2020
>Closed-Date:    Mon Apr 27 21:09:52 +0000 2020
>Last-Modified:  Mon Apr 27 21:09:52 +0000 2020
>Originator:     Izumi Tsutsui
>Release:        NetBSD 9.0
>Organization:
>Environment:
System: NetBSD 9.0 GENERIC
Architecture: i386
Machine: i386
>Description:
In sys/external/bsd/drm2/dist/drm/radeon/radeon_ttm.c,
radeon_ttm_tt_populate() calls drm_prime_bus_dmamap_load_sgt()
in sys/external/bsd/drm2/dist/drm/drm_prime.c and it calls
bus_dmamap_load_raw(9), but there is no bus_dmamap_unload()
in radeon_ttm_tt_unpopulate().

>How-To-Repeat:
Code inspection.

>Fix:
Call bus_dmamap_unload(9) in radeon_ttm_tt_unpopulate() as
i915_gem_object_get_pages_dmabuf() and i915_gem_object_put_pages_dmabuf()
in  sys/external/bsd/drm2/dist/drm/i915/i915_gem_dmabuf.c does?

Note this does not help kmem-96 leaks mentioned in PR/54818
 https://mail-index.netbsd.org/netbsd-bugs/2020/03/19/msg066605.html
but we should double-check all bus_dmamap_load(9) pairs?

Index: sys/external/bsd/drm2/dist/drm/radeon/radeon_ttm.c
===================================================================
RCS file: /cvsroot/src/sys/external/bsd/drm2/dist/drm/radeon/radeon_ttm.c,v
retrieving revision 1.15
diff -u -p -d -r1.15 radeon_ttm.c
--- sys/external/bsd/drm2/dist/drm/radeon/radeon_ttm.c	27 Aug 2018 15:22:54 -0000	1.15
+++ sys/external/bsd/drm2/dist/drm/radeon/radeon_ttm.c	31 Mar 2020 14:41:39 -0000
@@ -838,6 +838,11 @@ static void radeon_ttm_tt_unpopulate(str
 #endif
 	bool slave = !!(ttm->page_flags & TTM_PAGE_FLAG_SG);

+#ifdef __NetBSD__
+	if (slave && ttm->sg) {
+		bus_dmamap_unload(ttm->bdev->dmat, gtt->ttm.dma_address);
+	}
+#endif
 	if (gtt && gtt->userptr) {
 		kfree(ttm->sg);
 		ttm->page_flags &= ~TTM_PAGE_FLAG_SG;

---
Izumi Tsutsui

>Release-Note:

>Audit-Trail:
From: "Izumi Tsutsui" <tsutsui@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55127 CVS commit: src/sys/external/bsd/drm2/dist/drm/radeon
Date: Mon, 27 Apr 2020 16:57:31 +0000

 Module Name:	src
 Committed By:	tsutsui
 Date:		Mon Apr 27 16:57:31 UTC 2020

 Modified Files:
 	src/sys/external/bsd/drm2/dist/drm/radeon: radeon_ttm.c

 Log Message:
 Fix possible bus_dmamap_load(9) leak.  PR/55127

 "Looks good to me" from riastradh@.
 Note it was also commented "that code path is likely to be reached"
 so maybe pullups are not necessary.


 To generate a diff of this commit:
 cvs rdiff -u -r1.16 -r1.17 \
     src/sys/external/bsd/drm2/dist/drm/radeon/radeon_ttm.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Mon, 27 Apr 2020 21:09:52 +0000
State-Changed-Why:
Patch applied.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.